syntax = "proto3";

package payment;

service PaymentService {
  rpc CreateSubscription (CreateSubscriptionRequest) returns (SubscriptionResponse);
  rpc GetSubscription (GetSubscriptionRequest) returns (SubscriptionResponse);
  rpc UpdateSubscription (UpdateSubscriptionRequest) returns (SubscriptionResponse);
  rpc CancelSubscription (CancelSubscriptionRequest) returns (CancelSubscriptionResponse);
  rpc ProcessPayment (ProcessPaymentRequest) returns (PaymentResponse);
}

message CreateSubscriptionRequest {
  string userId = 1;
  string planId = 2;
  string paymentMethodId = 3;
}

message GetSubscriptionRequest {
  string userId = 1;
}

message UpdateSubscriptionRequest {
  string userId = 1;
  string planId = 2;
}

message CancelSubscriptionRequest {
  string userId = 1;
}

message CancelSubscriptionResponse {
  bool success = 1;
}

message ProcessPaymentRequest {
  string userId = 1;
  string paymentMethodId = 2;
  double amount = 3;
  string currency = 4;
  string description = 5;
}

message PaymentResponse {
  string id = 1;
  string userId = 2;
  double amount = 3;
  string currency = 4;
  string status = 5;
  string createdAt = 6;
}

message SubscriptionResponse {
  string id = 1;
  string userId = 2;
  string planId = 3;
  string status = 4;
  string startDate = 5;
  string endDate = 6;
  string createdAt = 7;
  string updatedAt = 8;
} 